fixed a few bugs and updated docs
