# docs/swagger.json
@@ -578,7 +578,18 @@
                 "tags": [
                     "Teams"
                 ],
-                "summary": "Post a team",
+                "summary": "Create a team",
+                "parameters": [
+                    {
+                        "description": "Create team payload",
+                        "name": "team",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateTeam"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -1636,6 +1647,29 @@
                     "maximum": 3,
                     "minimum": 0,
                     "example": 1
+                }
+            }
+        },
+        "CreateTeam": {
+            "type": "object",
+            "required": [
+                "budget",
+                "country",
+                "name",
+                "owner"
+            ],
+            "properties": {
+                "budget": {
+                    "type": "integer"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "integer"
                 }
             }
         },
